# rgb-sdk

./: .dockerignore  .gitignore  README.md  app.json  package-lock.json
.github/workflows/: bindings.yml  lint.yml
android/app/: build.gradle
android/app/src/debug/java/com/react_native_demo/: ReactNativeFlipper.java
android/app/src/main/java/com/react_native_demo/: DemoPackage.java  MainActivity.java  MainApplication.java
artifacts/: librgb.h
bindings/android/: .gitignore  Dockerfile  README.md  build_rust.sh  local.properties  settings.gradle  swig.i
bindings/darwin/rgb.xcodeproj/: project.pbxproj
bindings/darwin/rgb.xcodeproj/project.xcworkspace/xcuserdata/orlovsky.xcuserdatad/: UserInterfaceState.xcuserstate
bindings/darwin/rgblib/: librgb.h  librgb.modulemap  rgblib.h
bindings/darwin/rgblib.xcodeproj/: project.pbxproj
bindings/darwin/rgblib.xcodeproj/project.xcworkspace/xcuserdata/orlovsky.xcuserdatad/: UserInterfaceState.xcuserstate
bindings/darwin/rgblib.xcodeproj/xcuserdata/orlovsky.xcuserdatad/xcschemes/: rgblib ios.xcscheme  rgblib macos.xcscheme  xcschememanagement.plist
bindings/npm/: Dockerfile  README.md  binding.gyp  package.json  rgb.js  rgblib.js  swig.i
bindings/python/: .gitignore  Dockerfile  README.md  setup.py  swig.i
bindings/swift-pkg/: BUILD.md  README.md
bindings/swift-pkg/Headers/: CRgbLib-Bridging-Header.h
bindings/swift-pkg/Sources/CRgbLib/: module.modulemap
bindings/swift-pkg/Tests/: LinuxMain.swift
bindings/swift-pkg/Tests/CRgbLibTests/: CRgbLibTests.swift  XCTestManifests.swift
demo/android/: README.md  build.gradle
demo/android/app/: build.gradle
demo/android/app/src/main/: AndroidManifest.xml
demo/android/app/src/main/java/org/lnpbp/demoapp/: DemoApp.java  MainActivity.java
demo/android/gradle/wrapper/: gradle-wrapper.properties
demo/cocoa-touch/: README.md
demo/cocoa-touch/RGB Demo App/: AppDelegate.swift  ViewController.swift
demo/cocoa-touch/RGB Demo App.xcodeproj/: project.pbxproj
demo/cocoa-touch/RGB Demo App.xcodeproj/project.xcworkspace/xcuserdata/orlovsky.xcuserdatad/: UserInterfaceState.xcuserstate
demo/cocoa-touch/RGB Demo App.xcodeproj/xcuserdata/orlovsky.xcuserdatad/xcschemes/: xcschememanagement.plist
demo/cocoa-touch/RGB Demo App/Base.lproj/: Main.storyboard
demo/cocoa-touch/RGB Demo App/RGBLib/Model/: TransferArgs.swift
demo/ios/: README.md
demo/ios/RGB Demo App/: AppDelegate.swift  ViewController.swift
demo/ios/RGB Demo App.xcodeproj/: project.pbxproj
demo/ios/RGB Demo App.xcodeproj/project.xcworkspace/xcuserdata/orlovsky.xcuserdatad/: UserInterfaceState.xcuserstate
demo/nodejs/: README.md  example.js
demo/python/: README.md  example.py
demo/react-native/: App.js  README.md  package.json
demo/react-native/android/: settings.gradle
demo/react-native/android/app/: _BUCK  build.gradle
demo/react-native/android/app/src/main/: AndroidManifest.xml
demo/react-native/android/app/src/main/java/com/react_native_demo/: MainApplication.java  ReactModule.java
demo/react-native/android/app/src/main/res/values/: strings.xml
demo/react-native/ios/: Podfile
demo/react-native/ios/react_native_demo/: AppDelegate.m  Info.plist
demo/react-native/ios/react_native_demo.xcodeproj/: project.pbxproj
demo/react-native/ios/react_native_demo.xcodeproj/xcshareddata/xcschemes/: react_native_demo.xcscheme
demo/react-native/ios/react_native_demo/Base.lproj/: LaunchScreen.xib
demo/react-native/ios/react_native_demoTests/: react_native_demoTests.m
ffi/android/: Dockerfile  README.md  build.gradle  build_rust.sh  swig.i
ffi/darwin/rgb/: librgb.modulemap  rgb.h
ffi/darwin/rgb.xcodeproj/project.xcworkspace/xcuserdata/orlovsky.xcuserdatad/: UserInterfaceState.xcuserstate
ffi/darwin/rgb.xcodeproj/xcuserdata/orlovsky.xcuserdatad/xcschemes/: xcschememanagement.plist
ffi/ios/: README.md
ffi/nodejs/: Dockerfile  README.md  binding.gyp  package.json  rgb_node.js  swig.i
ffi/npm/: README.md  binding.gyp  package.json
ffi/python/: .gitignore  Dockerfile  README.md  setup.py  swig.i
ffi/swift-pkg/: Package.swift
ios/react_native_demo.xcodeproj/: project.pbxproj
ios/react_native_demo.xcodeproj/xcshareddata/xcschemes/: react_native_demo-tvOS.xcscheme  react_native_demo.xcscheme
librgb/: .gitignore  Cargo.toml  build.rs  cbindgen.toml
librgb/src/: error.rs  external.rs  helpers.rs  internal.rs  lib.rs
rust-ffi/: Cargo.toml
rust-lib/: Cargo.toml
rust-lib/src/: lib.rs
wrappers/ecmascript/: rgb.js
wrappers/python/: rgb_node.py
wrappers/swift/: README.md  RGB20Controller.swift  RGBController.swift
wrappers/swift-framework/Rgb/: Rgb.h  RgbClient.swift
wrappers/swift-framework/Rgb.xcodeproj/: project.pbxproj
wrappers/swift-framework/Rgb.xcodeproj/project.xcworkspace/xcuserdata/orlovsky.xcuserdatad/: UserInterfaceState.xcuserstate
wrappers/swift-framework/Rgb.xcodeproj/xcuserdata/orlovsky.xcuserdatad/xcschemes/: xcschememanagement.plist
wrappers/swift/Tests/RgbTests/: RgbTests.swift
