[package]
name = "librgb"
version = "0.2.0"
description = "C-language bindings for RGB (smart contracts on Bitcoin & Lightning network)"
authors = ["Dr Maxim Orlovsky <orlovsky@pandoracore.com>",
           "Zoe Faltibà <zoefaltiba@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "rgb"

[build-dependencies]
cbindgen = "^0.14"
openssl = { version = "^0.10", features = ["vendored"] }

[dependencies]
amplify = "2.4"
amplify_derive = "2.4"
log = "0.4"
rgb_node = { version = "~0.2.0-rc.5", features = [ "server", "client", "cli", "node", "fungibles" ] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "~1.5.0"
serde_with_macros = "~1.2.0" # Fix for the problem in 1.3.0
serde_json = "~1.0.55"

[patch.crates-io]
# Remove this once https://github.com/jean-airoldie/zeromq-src-rs/pull/15 got merged
zeromq-src = { git = "https://github.com/LNP-BP/zeromq-src-rs", branch = "fix/cmake" }

[target.'cfg(target_os="android")'.dependencies]
android_logger = "~0.8.6"

[target.'cfg(any(target_os="android", target_os="ios"))'.dependencies.zmq]
version = "~0.9.2"
features = ["vendored"]

[target.'cfg(any(target_os="android", target_os="ios"))'.dependencies.libsqlite3-sys]
version = "~0.18.0"
features = ["bundled"]

[target.'cfg(not(target_os="android"))'.dependencies]
env_logger = "~0.7.1"

[workspace]
