[package]
name = "rgb"
version = "0.1.0-rc.1"
authors = ["Dr Maxim Orlovsky <orlovsky@pandoracore.com>",
           "Alekos Filini <alekos.filini@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "rgb"

[build-dependencies]
cbindgen = "^0.14"
openssl = { version = "^0.10", features = ["vendored"] }

[dependencies]
log = "0.4"
rgb_node = { git = "https://github.com/LNP-BP/rgb-node", branch = "master" }
serde = { version = "~1.0.111", features = ["derive"] }
serde_with = "~1.5.0"
serde_json = "~1.0.55"

[patch.crates-io]
# We need this b/c of breaking change in tagged hash type generation
bitcoin_hashes = { git = "https://github.com/LNP-BP/bitcoin_hashes", tag = "lnpbp-v0.1.0-rc1" }
bitcoin = { git = "https://github.com/LNP-BP/rust-bitcoin", tag = "lnpbp-v0.1.0-rc1" }
# We need custom branches here just to depend on the same bitcoin master and do
# not have secp256k1 version conflict
miniscript = { git = "https://github.com/LNP-BP/rust-miniscript", tag = "lnpbp-v0.1.0-rc1" }
# Remove this once https://github.com/jean-airoldie/zeromq-src-rs/pull/15 got merged
zeromq-src = { git = "https://github.com/LNP-BP/zeromq-src-rs", branch = "fix/cmake" }

[target.'cfg(target_os="android")'.dependencies]
android_logger = "~0.8.6"

[target.'cfg(target_os="android")'.dependencies.zmq]
version = "~0.9.2"
features = ["vendored"]

[target.'cfg(not(target_os="android"))'.dependencies]
env_logger = "~0.7.1"

[workspace]
