[package]
name = "rgb"
version = "0.1.0-rc.1"
authors = ["Dr Maxim Orlovsky <orlovsky@pandoracore.com>",
           "Zoe Faltibà <zoefaltiba@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "rgb"

[build-dependencies]
cbindgen = "^0.14"
openssl = { version = "^0.10", features = ["vendored"] }

[dependencies]
amplify = "~2.3.1"
amplify_derive = "~2.3.0"
log = "0.4"
rgb_node = { version = "~0.2.0-beta.4", features = [
    "server", "client", "cli", "node" ] }
serde = { version = "~1.0.111", features = ["derive"] }
serde_with = "~1.5.0"
serde_with_macros = "~1.2.0" # Fix for the problem in 1.3.0
serde_json = "~1.0.55"

[patch.crates-io]
lightning-invoice = { git = "https://github.com/LNP-BP/rust-lightning-invoice", tag = "lnpbp-v0.1.0-beta-4" }
# Remove this once https://github.com/jean-airoldie/zeromq-src-rs/pull/15 got merged
zeromq-src = { git = "https://github.com/LNP-BP/zeromq-src-rs", branch = "fix/cmake" }

[target.'cfg(target_os="android")'.dependencies]
android_logger = "~0.8.6"

[target.'cfg(target_os="android")'.dependencies.zmq]
version = "~0.9.2"
features = ["vendored"]

[target.'cfg(target_os="android")'.dependencies.libsqlite3-sys]
version = "~0.18.0"
features = ["bundled"]

[target.'cfg(not(target_os="android"))'.dependencies]
env_logger = "~0.7.1"

[workspace]
